Fixed help panel sizing issue on small screens

--- a/src/ui/panels/helppanel.minimal.css
+++ b/src/ui/panels/helppanel.minimal.css
@@ -7,8 +7,8 @@
   margin: 0;
   padding: 0;
   height: auto;
-  max-width: unset;
-  max-height: 75vh;
+  max-width: min(70vw, 687px);
+  max-height: 70vh;
   overflow-x: hidden !important;
   overflow-y: auto !important;
 }
